[#3020]Remove old code and TODO comments. Use valueOf() instead of new.